--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,49 @@
+<section class="content">
+	<div class="main-header">
+		Header
+	</div>
 
-{{outlet}}
+	<div class="main">
+		<form class="form" role="form" {{action "calculate" on="submit"}}>
+
+			<div class="row">
+				<div class="col-sm-5">
+					Human Height: 
+				</div>
+
+				<div class="col-sm-5">
+					{{input type="number" class="form-input" id="humanHeight" value=humanHeight placeholder="Inches..."}}
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-5">
+					Pet Height: 
+				</div>
+
+				<div class="col-sm-5">
+					{{input type="number" class="form-input" id="petHeight" value=petHeight placeholder="Inches..."}}
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-5">
+					Distance: 
+				</div>
+
+				<div class="col-sm-5">
+					{{input type="number" class="form-input" id="distance" value=distance placeholder="KMs..."}}
+				</div>
+			</div>
+
+			<div class="row form-button">
+				<button role="submit">Calculate</button>
+			</div>
+
+			<div class="row results">
+				{{results}}
+			</div>
+
+		</form>
+	</div>
+</section>
