--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<section class="content">
+<section class="content app">
 	<div class="main-header">
 		Header
 	</div>
@@ -41,7 +41,14 @@
 			</div>
 
 			<div class="row results">
-				{{results}}
+				<div class="col-sm-5">
+				Results:
+				</div>
+				<div class="col-sm-5">
+				<p>
+					{{results}}
+					</p>
+				</div>
 			</div>
 
 		</form>
