--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,7 +9,7 @@
 
 			<div class="row unmargin">
 				<div class="col-xs-4">
-					Human Height: 
+					Human's Height: 
 				</div>
 
 				<div class="col-xs-4">
@@ -19,7 +19,7 @@
 
 			<div class="row unmargin">
 				<div class="col-xs-4">
-					Pet Height: 
+					Pet's Height: 
 				</div>
 
 				<div class="col-xs-4">
