--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="row form-button unmargin">
-				<button role="submit">Calculate</button>
+				<button role="submit">Calculate!</button>
 			</div>
 
 			<div class="row results unmargin">
